--- a/c# Dotnet Core/STED/src/DataProviders/DataProviders.csproj
+++ b/c# Dotnet Core/STED/src/DataProviders/DataProviders.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Adapters\Adapters.csproj" />
+    <ProjectReference Include="..\Adapters\Adapters.csproj" />
   </ItemGroup>
 
 </Project>
