--- a/c# Dotnet Core/STED/src/SerenityApi/SerenityApi.net.csproj
+++ b/c# Dotnet Core/STED/src/SerenityApi/SerenityApi.net.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Adapters\Adapters.csproj" />
     <ProjectReference Include="..\DataProviders\DataProviders.csproj" />
     <ProjectReference Include="..\Tools\Tools.csproj" />
   </ItemGroup>
